Added community table
