# server/src/interfaces/http/community/CommunitySerializer.js
@@ -1,0 +1,13 @@
+const CommunitySerializer = {
+  serialize({ community_id, community_name, community_address, agent_id, agent_designation }) {
+    return {
+      communityId: community_id,
+      communityName: community_name,
+      communityAddress: community_address,
+      agentId: agent_id,
+      agentDesignation: agent_designation
+    };
+  }
+};
+
+module.exports = CommunitySerializer;
